@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-13 20:41:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-27
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingh--head--0.5--patch-27
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Printf.hs
+
+
 2004-11-13 20:23:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-26
 
     Summary:
